:tv: :bug: :checkered_flag: fixed Work transition jitter and Firefox layout issues

--- a/client/src/styles/main.styl
+++ b/client/src/styles/main.styl
@@ -40,10 +40,10 @@ html
   // text-shadow 1px 1px 1px #000
 
 body
-  display flex
-  align-content center
-  justify-content center
-  flex-flow column nowrap
+  // display flex
+  // align-content center
+  // justify-content center
+  // flex-flow column nowrap
   background-repeat repeat
   // background url(../img/vintage-leaves/vintage-leaves.png)
   // background url(../img/skyscraper/skyscraper/skyscraper.png)
